style.css: Prevent wrapping in flights table

--- a/skylines/public/css/style.css
+++ b/skylines/public/css/style.css
@@ -84,7 +84,7 @@ textarea {
   text-align:right;
 }
 
-#flight-table .date {
+#flight-table td {
   white-space: nowrap;
 }
 
